log
sá., 19 de mar. de 2022 16:28:47: 
 tests:  0|6
total_score: 0/70
1893bd1
sá., 19 de mar. de 2022 16:32:03: 
 list.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
0bca006
sá., 19 de mar. de 2022 16:33:10: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:9: error: conflicting types for 'dato'
   List* dato = (List*) malloc (sizeof(List));
         ^~~~
list.c:32:10: note: previous declaration of 'dato' was here
     List dato;
          ^~~~
Compilation failed
9fb0188
sá., 19 de mar. de 2022 16:33:24: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:9: error: redeclaration of 'dato' with no linkage
   List* dato = (List*) malloc (sizeof(List));
         ^~~~
list.c:32:11: note: previous declaration of 'dato' was here
     List *dato;
           ^~~~
Compilation failed
bec436b
sá., 19 de mar. de 2022 16:33:38: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
fa32755
sá., 19 de mar. de 2022 16:34:36: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:24: error: too few arguments to function 'calloc'
   List* dato = (List*) calloc (sizeof(List));
                        ^~~~~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:484:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  void *calloc (size_t, size_t) __MINGW_ATTRIB_MALLOC;
                                        ^~~~~~
Compilation failed
c4f37bc
sá., 19 de mar. de 2022 16:35:57: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:32: error: expected expression before 'List'
   List* dato = (List*) calloc (List*sizeof(List));
                                ^~~~
list.c:33:24: error: too few arguments to function 'calloc'
   List* dato = (List*) calloc (List*sizeof(List));
                        ^~~~~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:484:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  void *calloc (size_t, size_t) __MINGW_ATTRIB_MALLOC;
                                        ^~~~~~
Compilation failed
bc58698
sá., 19 de mar. de 2022 16:37:25: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
dc09755
sá., 19 de mar. de 2022 16:45:03: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:9: error: redefinition of 'dato'
   List* dato = (List*) malloc (sizeof(List));
         ^~~~
list.c:32:11: note: previous definition of 'dato' was here
     List *dato=NULL;
           ^~~~
Compilation failed
88cf7cc
sá., 19 de mar. de 2022 16:46:14: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
c8ec1a3
sá., 19 de mar. de 2022 17:08:25: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 25/70
cbefb4c
sá., 19 de mar. de 2022 17:16:22: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
7f4a031
sá., 19 de mar. de 2022 17:17:38: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
0581c3c
sá., 19 de mar. de 2022 17:18:24: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
510947f
sá., 19 de mar. de 2022 17:20:23: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
1add878
sá., 19 de mar. de 2022 17:26:15: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 35/70
a856a9b
sá., 19 de mar. de 2022 17:39:10: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:85:10: error: 'data' redeclared as different kind of symbol
     Node data;
          ^~~~
list.c:84:36: note: previous definition of 'data' was here
 void pushFront(List * list, void * data) {
                                    ^~~~
list.c:86:19: error: 'list' is a pointer; did you mean to use '->'?
     data.next=list.head;
                   ^
                   ->
list.c:89:25: error: incompatible types when assigning to type 'Node * {aka struct Node *}' from type 'Node {aka struct Node}'
         list->head->prev=data;
                         ^
list.c:93:15: error: incompatible types when assigning to type 'Node * {aka struct Node *}' from type 'Node {aka struct Node}'
     list->head=data;
               ^
Compilation failed
d7a4640
sá., 19 de mar. de 2022 17:41:14: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:89:13: error: request for member 'next' in something not a structure or union
         data.next=list.head;
             ^
list.c:89:23: error: 'list' is a pointer; did you mean to use '->'?
         data.next=list.head;
                       ^
                       ->
Compilation failed
a2f5dec
sá., 19 de mar. de 2022 17:41:26: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:89:13: error: request for member 'next' in something not a structure or union
         data.next=list->head;
             ^
Compilation failed
d7edcb9
sá., 19 de mar. de 2022 17:41:36: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:89:13: error: dereferencing 'void *' pointer [-Werror]
         data->next=list->head;
             ^~
list.c:89:13: error: request for member 'next' in something not a structure or union
cc1.exe: all warnings being treated as errors
Compilation failed
9c14fd3
sá., 19 de mar. de 2022 17:47:24: 
 list.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
test.c: In function 'pushFront':
list.c:87:22: error: 'nuevo_nodo' is used uninitialized in this function [-Werror=uninitialized]
     nuevo_nodo->data = data;
     ~~~~~~~~~~~~~~~~~^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8594f05
sá., 19 de mar. de 2022 17:49:11: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
test.c: In function 'pushFront':
list.c:87:22: error: 'nuevo_nodo' is used uninitialized in this function [-Werror=uninitialized]
     nuevo_nodo->data = dato;
     ~~~~~~~~~~~~~~~~~^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
89d5f0b
